tests/error/nonexistant_func_after_arrow.ca

def main()
  1 -> NonexistantFunc

stack = make_vm(main)
stack.run

assert(stack.has_error)
assert(stack.error_message == "Unknown function: NonexistantFunc")
